test/sema/member_expr_invalid_member.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct Struct {
  x: i32
}

fn main() -> void {
  let s = Struct { x: 0 };

  let y = s.y;
  // CHECK: [[# @LINE - 1 ]]:12: error: 'Struct' has no field called 'y'
}
